--- a/MediPlus/MediPlus.MVC/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/MediPlus/MediPlus.MVC/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -69,8 +69,9 @@
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Custom Components:</h6>
-                        <a class="collapse-item" href="buttons.html">Buttons</a>
-                        <a class="collapse-item" href="cards.html">Cards</a>
+                        <a class="collapse-item" asp-area="Admin" asp-controller="Doctor" asp-action="Create">Doctors</a>
+                        <a class="collapse-item" asp-area="Admin" asp-controller="Patient" asp-action="Create">Patients</a>
+                        <a class="collapse-item" asp-area="Admin" asp-controller="Appointment" asp-action="Create">Appointments</a>
                     </div>
                 </div>
             </li>
